MDEV-7005 NULLIF does not work as documented MDEV-7146 NULLIF returns unexpected result with a YEAR field